Add locale(yml) files for all the views

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,25 +1,25 @@
 <div id="main">
   
-  <h1>About</h1>
+  <h1><%= t(".about") %></h1>
   
   <ol id="about-nav">
     <li>
-      <a href="#branching-and-merging" class="three-line current" id="nav-branching-and-merging" data-section-id="branching-and-merging">Branching and Merging</a>
+      <a href="#branching-and-merging" class="three-line current" id="nav-branching-and-merging" data-section-id="branching-and-merging"><%= t(".branching_and_merging") %></a>
     </li>
     <li>
-      <a href="#small-and-fast" class="two-line" id="nav-small-and-fast" data-section-id="small-and-fast">Small and Fast</a>
+      <a href="#small-and-fast" class="two-line" id="nav-small-and-fast" data-section-id="small-and-fast"><%= t(".small_and_fast") %></a>
     </li>
     <li>
-      <a href="#distributed" class="one-line" id="nav-distributed" data-section-id="distributed">Distributed</a>
+      <a href="#distributed" class="one-line" id="nav-distributed" data-section-id="distributed"><%= t(".distributed") %></a>
     </li>
     <li>
-      <a href="#info-assurance" class="two-line" id="nav-info-assurance" data-section-id="info-assurance">Data Assurance</a>
+      <a href="#info-assurance" class="two-line" id="nav-info-assurance" data-section-id="info-assurance"><%= t(".data_assurance") %></a>
     </li>
     <li>
-      <a href="#staging-area" class="two-line" id="nav-staging-area" data-section-id="staging-area">Staging Area</a>
+      <a href="#staging-area" class="two-line" id="nav-staging-area" data-section-id="staging-area"><%= t(".stating_area") %></a>
     </li>
     <li>
-      <a href="#free-and-open-source" class="three-line" id="nav-free-and-open-source" data-section-id="free-and-open-source">Free and Open Source</a>
+      <a href="#free-and-open-source" class="three-line" id="nav-free-and-open-source" data-section-id="free-and-open-source"><%= t(".free_and_open_source") %></a>
     </li>
   </ol>
 
