--- a/app/views/books/_chapters.html.erb
+++ b/app/views/books/_chapters.html.erb
@@ -1,4 +1,4 @@
-<a class="dropdown-trigger" id="book-chapters-trigger" data-panel-id="chapters-dropdown" href="#">Chapters ▾</a>
+<a class="dropdown-trigger" id="book-chapters-trigger" data-panel-id="chapters-dropdown" href="#"><%= t(".chapters") %></a>
 <div class='dropdown-panel' id='chapters-dropdown'>
   <div class="three-column">
     <div class='column-left'>
@@ -11,7 +11,7 @@
       <%= render :partial => 'chapter_listings', :locals => {:column => 3} %>
       <ol class="book-toc">
         <li class='chapter'>
-          <h2><a href="/book/commands">Index of Commands</a></h2>
+          <h2><a href="/book/commands"><%= t(".index_of_commands") %></a></h2>
         </li>
       </ol>
     </div>
