--- a/app/views/books/_translations.html.erb
+++ b/app/views/books/_translations.html.erb
@@ -1,5 +1,5 @@
 <p>
-This book is translated into 
+  <%= t(".translated_into") %>
   <a href="/book/de">German</a>,
   <a href="/book/zh">中文</a>,
   <a href="/book/fr">French</a>,
@@ -11,7 +11,7 @@ This book is translated into
   <a href="/book/cs">Czech</a>.
 </p>
 <p>
-Partial translations available in
+<%= t(".partial_tanslations") %>
   <a href="/book/ar">Arabic</a>,
   <a href="/book/es">Spanish</a>,
   <a href="/book/id">Indonesian</a>,
@@ -23,7 +23,7 @@ Partial translations available in
   <a href="/book/zh-tw">Taiwanese Mandarin</a>,
 </p>
 <p>
-Translations started for
+<%= t(".translations_started_for") %>
   <a href="/book/az">Azerbaijani</a>,
   <a href="/book/be">Belarusian</a>,
   <a href="/book/ca">Catalan</a>,
@@ -38,6 +38,5 @@ Translations started for
 </p>
 <hr class="sidebar"/>
 <p>
-The source of this book and the translations are <a href="https://github.com/progit/progit">hosted on GitHub.</a></br>
-Patches, suggestions, and comments are welcome.
+<%= t(".p1_html") %>
 </p>
