--- a/app/views/books/commands.html.erb
+++ b/app/views/books/commands.html.erb
@@ -2,7 +2,7 @@
 <% @subsection = 'book' %>
 
 <div id='main' class='book'>
-  <h1>Index of Commands</h1>
+  <h1><%= t(".index_of_commands") %></h1>
   <table class="commands">
   <% @groups.each do |title, commands| %>
     <tr>
