--- a/app/views/doc/ext.html.erb
+++ b/app/views/doc/ext.html.erb
@@ -1,109 +1,108 @@
 <%- @section    = 'documentation' %>
 <%- @subsection = 'external-links' %>
-<%- @page_title = 'Git - External Links' %>
+<%- @page_title = t(".page_title") %>
 
 <div id='main'>
-  <h1>External Links</h1>
-  <h2>Tutorials</h2>
+  <h1><%= t(".external_links") %></h1>
+  <h2><%= t(".tutorials") %></h2>
   <div class='two-column'>
     <div class='column-left'>
-      <h3>Short &amp; Sweet</h3>
+      <h3><%= t(".short_and_sweet_html") %></h3>
       <ul class='content-list'>
         <li>
-          <h4><a href="http://gitref.org/">Introductory Reference &amp; Tutorial</a></h4>
+          <h4><a href="http://gitref.org/"><%= t(".introductory_reference") %></a></h4>
           <p class='description'>
-            This introductory walkthrough acts as a nice tutorial.
+            <%= t(".introductory_ref_description") %>
           </p>
         </li>
         <li>
-          <h4><a href="/docs/gittutorial">Official Git Tutorial</a></h4>
+          <h4><a href="/docs/gittutorial"><%= t(".official_git_tut") %></a></h4>
           <p class='description'>
-            The official gittutorial man page is a good place to start.
+            <%= t(".official_git_tut_description") %>
           </p>
         </li>
         <li>
-          <h4><a href="/docs/everyday">Everyday Git</a></h4>
+          <h4><a href="/docs/everyday"><%= t(".everyday_git") %></a></h4>
           <p class='description'>
-            Learn the basics with 20 of the most common commands.
+            <%= t(".everyday_git_description") %>
           </p>
         </li>
         <li>
-          <h4><a href="http://gitimmersion.com/">Git Immersion</a></h4>
+          <h4><a href="http://gitimmersion.com/"><%= t(".git_immersion") %></a></h4>
           <p class='description'>
-            A guided tour that walks through the fundamentals of Git.
+            <%= t(".git_immersion_description") %>
           </p>
         </li>
       </ul>
     </div>
     <div class='column-right'>
-      <h3>Diving Deeper</h3>
+      <h3><%= t(".diving_deeper") %></h3>
       <ul class='content-list'>
         <li>
           <h4><a
-		  href="http://rypress.com/tutorials/git/index.html">Ry&rsquo;s Git
-		  Tutorial</a></h4>
+		  href="http://rypress.com/tutorials/git/index.html"><%= t(".rys_git_tutorial_html") %></a></h4>
           <p class='description'>
-			A hands-on introduction to the entire Git porcelain.
+			         <%= t(".rys_git_tut_description") %>
           </p>
         </li>
         <li>
-          <h4><a href="http://hoth.entp.com/output/git_for_designers.html">Git for Designers</a></h4>
+          <h4><a href="http://hoth.entp.com/output/git_for_designers.html"><%= t(".git_for_designers") %></a></h4>
           <p class='description'>
-            No knowledge of version control? No problem.
+            <%= t(".git_for_designers_description") %>
           </p>
         </li>
         <li>
-          <h4><a href="http://eagain.net/articles/git-for-computer-scientists/">Git for Computer Scientists</a></h4>
+          <h4><a href="http://eagain.net/articles/git-for-computer-scientists/"><%= t(".git_for_computer_scientists") %></a></h4>
           <p class='description'>
-            A quick introduction to Git internals for people who aren't scared by words like Directed Acyclic Graph.
+            <%= t(".git_for_computer_scientists_desc") %>
           </p>
         </li>
         <li>
-          <h4><a href="http://www-cs-students.stanford.edu/~blynn/gitmagic/">Git Magic</a></h4>
+          <h4><a href="http://www-cs-students.stanford.edu/~blynn/gitmagic/"><%= t(".git_magic") %></a></h4>
           <p class='description'>
-            An alternative book with the source <a href="http://github.com/blynn/gitmagic/tree/master">online</a>.
+            <%= t(".git_magic_description_html") %>
           </p>
         </li>
         <li>
-          <h4><a href="http://help.github.com/">Help.GitHub</a></h4>
+          <h4><a href="http://help.github.com/"><%= t(".help_github") %></a></h4>
           <p class='description'>
-            Guides on a variety of Git and GitHub related topics.
+            <%= t(".help_github_description") %>
           </p>
         </li>
       </ul>
     </div>
   </div>
-  <h2>Books</h2>
+  <h2><%= t(".books") %></h2>
   <div class='two-column'>
     <div class='column-left'>
       <ul class='books-list'>
         <li>
           <a href="http://www.pragprog.com/titles/tsgit/pragmatic-version-control-using-git"><img src="/images/books/pragmatic-version-control@2x.jpg" width="107" height="128" /></a>
-          <h4><a href="http://www.pragprog.com/titles/tsgit/pragmatic-version-control-using-git">Pragmatic Version Control Using Git</a></h4>
+          <h4><a href="http://www.pragprog.com/titles/tsgit/pragmatic-version-control-using-git"><%= t(".pragmatic_git") %></a></h4>
           <p class='description'>
-            By Travis Swicegood
+            <%= t(".pragmatic_git_description") %>
           </p>
         </li>
         <li>
           <a href="/book"><img src="/images/books/pro-git@2x.jpg" width="107" height="141" /></a>
-          <h4><a href="/book">Pro Git</a></h4>
+          <h4><a href="/book"><%= t(".pro_git") %></a></h4>
           <p class='description'>
-            By Scott Chacon
+            <%= t(".pro_git_description") %>
             <img class="creative-commons" src="/images/creative-commons@2x.png" width="115" height="28" />
           </p>
         </li>
         <li>
           <a href="http://peepcode.com/products/git-internals-pdf"><img src="/images/books/git-internals@2x.jpg" width="107" height="81" /></a>
-          <h4><a href="http://peepcode.com/products/git-internals-pdf">Git Internals Peepcode PDF</a></h4>
+          <h4><a href="http://peepcode.com/products/git-internals-pdf"><%= t(".git_internals") %></a></h4>
           <p class='description'>
-            By Scott Chacon
+            <%= t(".git_internals_description") %>
           </p>
         </li>
         <li>
           <a href="http://cbx33.github.com/gitt/"><img src="/images/books/git-in-the-trenches@2x.jpg" /></a>
-          <h4><a href="http://cbx33.github.com/gitt/">Git in the Trenches</a></h4>
+          <h4><a href="http://cbx33.github.com/gitt/"><%= t(".git_in_trenches") %></a></h4>
           <p class='description'>
-            By Peter Savage
+            <%= t(".git_in_trenches_description") %>
             <img class="creative-commons" src="/images/creative-commons.png" />
         </li>
       </ul>
@@ -112,23 +111,23 @@
       <ul class='books-list'>
         <li>
           <a href="http://www.amazon.com/Version-Control-Git-collaborative-development/dp/0596520123"><img src="/images/books/version-control-with-git@2x.jpg" width="107" height="140" /></a>
-          <h4><a href="http://www.amazon.com/Version-Control-Git-collaborative-development/dp/1449316387">Version Control with Git, 2nd ed.</a></h4>
+          <h4><a href="http://www.amazon.com/Version-Control-Git-collaborative-development/dp/1449316387"><%= t(".version_control") %></a></h4>
           <p class='description'>
-            By Jon Loeliger &amp; Matthew McCullough
+            <%= t(".version_control_description") %>
           </p>
         </li>
         <li>
           <a href="http://www.pragprog.com/titles/pg_git/pragmatic-guide-to-git"><img src="/images/books/pragmatic-guide-to-git@2x.jpg" width="107" height="162" /></a>
-          <h4><a href="http://www.pragprog.com/titles/pg_git/pragmatic-guide-to-git">Pragmatic Guide to Git</a></h4>
+          <h4><a href="http://www.pragprog.com/titles/pg_git/pragmatic-guide-to-git"><%= t(".pragmatic_guide") %></a></h4>
           <p class='description'>
-            By Travis Swicegood
+            <%= t(".pragmatic_guide_description") %>
           </p>
         </li>
         <li>
           <a href="http://www.packtpub.com/git-version-control-for-everyone/book"><img src="http://www.packtpub.com/sites/default/files/7522OS_mockupcover_bg_0.jpg" width="107"/></a>
-          <h4><a href="http://www.packtpub.com/git-version-control-for-everyone/book">Git: Version Control for Everyone</a></h4>
+          <h4><a href="http://www.packtpub.com/git-version-control-for-everyone/book"><%= t(".git_for_everyone") %></a></h4>
           <p class='description'>
-            By Ravishankar Somasundaram
+            <%= t(".git_for_everyone_description") %>
           </p>
         </li>
       </ul>
@@ -140,9 +139,9 @@
       <ul class='video-thumbnails'>
         <li>
           <a href="http://www.youtube.com/watch?v=4XpnKHJAok8"><img src="/images/videos/linus@2x.jpg" width="294" height="180" /></a>
-          <h4><a href="http://www.youtube.com/watch?v=4XpnKHJAok8">Tech Talk: Linus Torvalds on Git</a></h4>
+          <h4><a href="http://www.youtube.com/watch?v=4XpnKHJAok8"><%= t(".tech_talk") %></a></h4>
           <p class='description'>
-            Linus Torvalds visits Google to share his thoughts on Git, the SCM system he created.
+            <%= t(".tech_talk_description") %>
           </p>
         </li>
       </ul>
@@ -151,9 +150,9 @@
       <ul class='video-thumbnails'>
         <li>
           <a href="http://www.youtube.com/watch?v=ZDR433b0HJY"><img src="/images/videos/introgit@2x.jpg" width="294" height="180" /></a>
-          <h4><a href="http://www.youtube.com/watch?v=ZDR433b0HJY">Introduction to Git: Scott Chacon</a></h4>
+          <h4><a href="http://www.youtube.com/watch?v=ZDR433b0HJY"><%= t(".introduction_to_git") %></a></h4>
           <p class='description'>
-            This talk introduces the Git Version Control System by looking at what Git is doing when you run the commands you need to do basic version control with it.
+            <%= t(".introduction_to_git_description") %>
           </p>
         </li>
       </ul>
