--- a/app/views/doc/index.html.haml
+++ b/app/views/doc/index.html.haml
@@ -1,40 +1,40 @@
 - @section = "documentation"
-- @page_title = "Git - Documentation"
+- @page_title = t(".page_title")
 
 - content_for :sidebar do
   = render 'shared/book'
 
 %div#main
-  %h1 Documentation
+  %h1 #{t(".documentation")}
 
-  %h2 Reference
+  %h2 #{t(".reference")}
 
   %div.callout.ref-manual
-    %h3= link_to "Reference Manual", "/docs"
+    %h3= link_to t(".reference_manual"), "/docs"
     %p
-      The official and comprehensive <strong>man pages</strong> that are included in the Git package itself.
+      #{t(".callout_p1")}
 
   %p.quickref
-    Quick reference guides:
-    =link_to "Heroku Cheat Sheet", "https://na1.salesforce.com/help/doc/en/salesforce_git_developer_cheatsheet.pdf"
+    #{t(".quick_reference")}
+    =link_to t(".heroku_cheat_sheet"), "https://na1.salesforce.com/help/doc/en/salesforce_git_developer_cheatsheet.pdf"
     %small.light (PDF) &nbsp;|&nbsp;
-    =link_to "Visual Git Cheat Sheet", "http://ndpsoftware.com/git-cheatsheet.html"
+    =link_to t(".visual_git_cheat_sheet"), "http://ndpsoftware.com/git-cheatsheet.html"
     %small.light (SVG | PNG)
 
-  %h2 Book
+  %h2 #{t(".book")}
 
   %div#book-container
     %div#book-intro
       %p
-        Pro Git is written by Scott Chacon and published by Apress.
+        #{t(".book_intro_p1")}
 
       %p
-        Print copies can be purchased from <a href="http://www.amazon.com/gp/product/1430218339?ie=UTF8&camp=1789&creative=9325&creativeASIN=1430218339&linkCode=as2&tag=git-sfconservancy-20">Amazon</a> and <a href="https://github.s3.amazonaws.com/media/progit.en.pdf">PDF</a>, <a href="https://github.s3.amazonaws.com/media/pro-git.en.mobi">mobi</a>, and <a href="https://github.s3.amazonaws.com/media/progit.epub">ePub</a> versions are available for free.
+        #{t(".book_intro_p2_html")}
       %p
-        <a href="#" id="open-book">Back to book →</a>
+        <a href="#" id="open-book">#{t(".back_to_book")}</a>
       %p.license
         %img.creative-commons{:src => "/images/creative-commons@2x.png", :width => 115, :height => 28}
-        All content under the Creative Commons Attribution Non Commercial Share Alike 3.0 license.
+        #{t(".creative_commons")}
     %div#flippy-book
       %div#book-inside-page
         %span.header Scott Chacon
@@ -45,7 +45,7 @@
                 = chapter.number.to_s + '.'
                 %a{:href=>"/book/#{@book.code}/#{chapter.sections.first.slug}"}= chapter.title
           %li.chapter
-            %h2 <a href="/book/commands">Index of Commands</a>
+            %h2 <a href="/book/commands">#{t(".index_of_commands")}</a>
       %div#book-cover.open
         %div#book-cover-outside.face
           Pro Git
@@ -57,10 +57,10 @@
                 %h2
                   = chapter.number.to_s + '.'
                   %a{:href=>"/book/#{@book.code}/#{chapter.sections.first.slug}"}= chapter.title
-          <a href="#" id="about-book">Book information and downloads</a>
+          <a href="#" id="about-book">#{t(".book_information")}</a>
 
 
-  %h2 Videos
+  %h2 #{t(".videos")}
 
   - groups = @videos[0,4].group_by { |i| i[0] % 2 }
 
@@ -86,8 +86,7 @@
   %p
     %strong= link_to "See all videos →", "/videos"
 
-  %h2 External Links
+  %h2 #{t(".external_links")}
 
   %p
-    The <a href="/documentation/external-links">External Links section</a> is a curated, ever-evolving collection of tutorials, books, videos, and other Git resources.
-
+    #{t(".external_links_p1_html")}
