--- a/app/views/doc/ref.html.erb
+++ b/app/views/doc/ref.html.erb
@@ -1,15 +1,15 @@
 <%- @section    = 'documentation' %>
 <%- @subsection = 'reference' %>
-<%- @page_title = "Git - Reference" %>
+<%- @page_title = t(".page_title") %>
 
 <div id='main'>
-  <h1>Reference</h1>
+  <h1><%= t(".reference") %></h1>
   <div class='callout quickref'>
     <p>
-      Quick reference guides:
-      <a href=" https://na1.salesforce.com/help/doc/en/salesforce_git_developer_cheatsheet.pdf">Heroku Cheat Sheet</a>
+      <%= t(".quick_reference") %>
+      <a href=" https://na1.salesforce.com/help/doc/en/salesforce_git_developer_cheatsheet.pdf"><%= t(".heroku_cheat_sheet") %></a>
       <small class='light'>(PDF) &nbsp;|&nbsp;</small>
-      <a href="http://ndpsoftware.com/git-cheatsheet.html">Visual Git Cheat Sheet</a>
+      <a href="http://ndpsoftware.com/git-cheatsheet.html"><%= t(".visual_git_cheat_sheet") %></a>
       <small class='light'>(SVG | PNG)</small>
     </p>
   </div>
