--- a/app/views/downloads/downloading.html.haml
+++ b/app/views/downloads/downloading.html.haml
@@ -1,46 +1,45 @@
 - @section = "downloads"
 - @subsection = ""
-- @page_title = "Git - Downloading Package"
+- @page_title = t(".page_title")
 
 - content_for :sidebar do
   = render 'shared/book'
 
 %div#main
-  %h1 Downloading Git
+  %h1 #{t(".main_h1")}
 
   %div.callout.downloading
-    %h3 Your download is starting...
+    %h3 #{t(".callout_h3")}
 
-    %p=raw "You are downloading version <strong>#{@download.version.name}</strong> of Git for the <strong>#{@platform.capitalize}</strong> platform. This is the most recent <a href='#{@project_url}'>maintained build</a> for this platform. It was released <strong>#{time_ago_in_words @download.release_date} ago</strong>, on #{@download.release_date.strftime("%Y-%m-%d")}."
+    %p #{t(".callout_p1_html", download_version_name: @download.version.name, platform_capitalized: @platform.capitalize, project_url: @project_url, released_time_ago: time_ago_in_words(@download.release_date), download_release_date: @download.release_date.strftime("%Y-%m-%d"))}
 
-    %p=raw "<strong>If your download hasn't started, <a href=\"#{@download.url}\">click here to download manually</a>.</strong>"
+    %p #{t(".callout_p2_html", download_url: @download.url)}
 
-    %p.small=raw "The current source code release is version <strong>#{@latest.name}</strong>. If you want the newer version, you can build it from <a href=\"#{@source_url}\">the source code</a>."
+    %p.small #{t(".callout_p3_html", latest_name: @latest.name, source_url: @source_url)}
 
   %iframe{:width => 1, :height => 1, :frameborder => 0, :src => @download.url}
 
-  %h2 Now What?
+  %h2 #{t(".now_what")}
 
   %p
-    Now that you have downloaded Git, it's time to start using it.
+    #{t(".now_what_p1")}
 
   %ul#download-next-steps
     %li
       <a href="/book">
       <img src="/images/icons/nav-read-book.png" />
-      <h3>Read the Book</h3>
-      <p>Dive into the Pro Git book and learn at your own pace.</p>
+      <h3>#{t(".next_steps_li_1_h3")}</h3>
+      <p>#{t(".next_steps_li_1_p1")}</p>
       </a>
     %li
       <a href="/downloads/guis">
       <img src="/images/icons/nav-download-gui.png" />
-      <h3>Download a GUI</h3>
-      <p>Several free and commercial GUI tools are available for the #{@platform.capitalize} platform.</p>
+      <h3>#{t(".next_steps_li_2_h3")}</h3>
+      <p>#{t(".next_steps_li_2_p1", platform_capitalized: @platform.capitalize)}</p>
       </a>
     %li
       <a href="/community">
       <img src="/images/icons/nav-get-involved.png" />
-      <h3>Get Involved</h3>
-      <p>A knowledgeable Git community is available to answer your questions.</p>
+      <h3>#{t(".next_steps_li_3_h3")}</h3>
+      <p>#{t(".next_steps_li_3_p1")}</p>
       </a>
-
