--- a/app/views/downloads/index.html.haml
+++ b/app/views/downloads/index.html.haml
@@ -1,6 +1,6 @@
 - @section = "downloads"
 - @subsection = ""
-- @page_title = "Git - Downloads"
+- @page_title = t(".page_title")
 
 - content_for :sidebar do
   = render 'shared/book'
@@ -8,7 +8,7 @@
 %div#main
   %div.two-column
     %div.column-left
-      %h1 Downloads
+      %h1 #{t(".downloads")}
       %div.callout
         %table.binaries
           %tr
@@ -19,7 +19,7 @@
             %td= link_to "Solaris", "/download/linux", {:class => 'icon solaris'}
 
       %p
-        <a href="http://code.google.com/p/git-core/downloads/list">Older releases</a> are available and the <a href="https://github.com/git/git">Git source repository</a> is on GitHub.
+        #{t(".older_releases_html")}
 
 
     %div.column-right
@@ -29,29 +29,29 @@
   %div.callout#more-downloads
     %div.two-column
       %div.column-left
-        %h2 GUI Clients
+        %h2 #{t(".gui_clients")}
 
         %p
-          Git comes with built-in GUI tools (<strong>git-gui</strong>, <strong>gitk</strong>), but there are several third-party tools for users looking for a platform-specific experience.
+          #{t(".gui_clients_p1_html")}
 
         %p
-          %strong= link_to "View GUI Clients →", "/downloads/guis"
+          %strong= link_to t(".gui_clients_p2"), "/downloads/guis"
 
       %div.column-right
-        %h2 Logos
+        %h2 #{t(".logos")}
 
-        %p Various Git logos in PNG (bitmap) and EPS (vector) formats are available for use in online and print projects.
+        %p #{t(".logos_p1")}
 
         %p
-          %strong= link_to "View Logos →", "/downloads/logos"
+          %strong= link_to t(".logos_p2"), "/downloads/logos"
 
-  %h2 Git via Git
+  %h2 #{t(".logos_p1")}
 
   %p
-    If you already have Git installed, you can get the latest development version via Git itself:
+    #{t(".git_via_git_p1")}
 
   %code
     git clone https://github.com/git/git
 
   %p
-    You can also always browse the current contents of the git repository using the <a href="https://github.com/git/git">web interface</a>.
+    #{t(".git_via_git_p2_html")}
