--- a/app/views/about/_free_and_open_source.html.erb
+++ b/app/views/about/_free_and_open_source.html.erb
@@ -1,28 +1,27 @@
   <section class="about" id="free-and-open-source" style="display: none;">
-    <h2>Free and Open Source</h2>
+    <h2><%= t(".free_and_open_source") %></h2>
     <p>
-    Git is released under the <a href="https://github.com/git/git/blob/master/COPYING">GPLv2</a> <a href="http://www.opensource.org/docs/osd">open source license</a>.  This means that you are free to <a href="https://github.com/git/git">inspect the source code</a> at any time or <a href="https://github.com/git/git/blob/master/Documentation/SubmittingPatches">contribute</a> to the project yourself.
+      <%= t(".p1_html") %>
     </p>
     <p>
-    Under Git's GPLv2 software license, you <strong>may</strong>:
+      <%= t(".p2_html") %>
     </p><ul class="bullets">
-      <li>Use Git on open or proprietary projects for free, forever</li>
-      <li>Download, inspect and modify the source code to Git</li>
-      <li>Make proprietary changes to Git that you do not redistribute publicly</li>
-      <li>Call Git binaries from your open or proprietary programs</li>
-      <li>Publicly redistribute Git binaries with open or proprietary programs, given that they are unmodified or the modifications are public</li>
+      <li><%= t(".ul1_li1") %></li>
+      <li><%= t(".ul1_li2") %></li>
+      <li><%= t(".ul1_li3") %></li>
+      <li><%= t(".ul1_li4") %></li>
+      <li><%= t(".ul1_li5") %></li>
     </ul>
     <p></p>
     <p>
-    Under this license you <strong>may not</strong>:
+      <%= t(".p3_html") %>
     </p><ul class="bullets">
-      <li>Make proprietary changes to Git and publicly redistribute it without sharing the changes</li>
-      <li>Make and publicly distribute changes to Git under a different license</li>
-      <li>Use source code from the Git repository in a project under a different license without permission</li>
+      <li><%= t(".ul2_li1") %></li>
+      <li><%= t(".ul2_li2") %></li>
+      <li><%= t(".ul2_li3") %></li>
     </ul>
     <p></p>
     <div class="bottom-nav" style="display: block;">
-      <a href="#staging-area" class="previous" data-section-id="staging-area">← Staging Area</a>
+      <a href="#staging-area" class="previous" data-section-id="staging-area"><%= t(".staging_area") %></a>
     </div>
   </section>
-
