--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,6 +1,6 @@
 <%- @section    = 'documentation' %>
 <%- @subsection = 'book' %>
-<%- @page_title = "Git - Book" %>
+<%- @page_title = t(".page_title") %>
 
 <% content_for :sidebar do %>
   <%= render 'ebooks' %>
@@ -11,7 +11,7 @@
   <h1>Book</h1>
   <img style="float:right;margin: -20px 40px 0 40px;" src="/images/books/pro-git@2x.jpg" width="118" height="157" />
   <p>
-  The entire Pro Git book, written by Scott Chacon and published by Apress, is available here. All content is licensed under the <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons Attribution Non Commercial Share Alike 3.0 license</a>.  Print versions of the book are available on <a href="http://www.amazon.com/gp/product/1430218339?ie=UTF8&camp=1789&creative=9325&creativeASIN=1430218339&linkCode=as2&tag=git-sfconservancy-20">Amazon.com</a>.</>
+    <%= t(".main_p1_html") %>
   </p>
   <ol class='book-toc'>
     <% @book.chapters.each do |chapter| %>
@@ -30,8 +30,7 @@
     </li>
   <% end %>
   <li class='chapter'>
-    <h2><a href="/book/commands">Index of Commands</a></h2>
+    <h2><a href="/book/commands"><%= t(".index_of_commands") %></a></h2>
   </li>
   </ol>
 </div>
-
