--- a/app/views/doc/videos.html.erb
+++ b/app/views/doc/videos.html.erb
@@ -1,11 +1,11 @@
 <%- @section    = 'documentation' %>
 <%- @subsection = 'videos' %>
-<%- @page_title = 'Git - Videos' %>
+<%- @page_title = t(".page_title") %>
 
 <% groups = @videos.group_by { |i| i[0] % 2 } %>
 
 <div id='main'>
-  <h1>Videos</h1>
+  <h1><%= t(".videos") %></h1>
   <div class='two-column'>
     <div class='column-left'>
       <ul class='video-thumbnails'>
@@ -14,7 +14,7 @@
             <a href="/video/<%= video[4] %>"><img src="/images/video/ep<%= video[0] %>@2x.png" width="294" height="164" /></a>
             <h4><a href="/video/<%= video[4] %>"><%= video[3] %></a></h4>
             <p class='description'>
-              <strong>Length:</strong> <%= video[5] %>
+              <strong><%= t(".length") %></strong> <%= video[5] %>
             </p>
           </li>
         <% end %>
@@ -27,7 +27,7 @@
             <a href="/video/<%= video[4] %>"><img src="/images/video/ep<%= video[0] %>@2x.png" width="294" height="164" /></a>
             <h4><a href="/video/<%= video[4] %>"><%= video[3] %></a></h4>
             <p class='description'>
-              <strong>Length:</strong> <%= video[5] %>
+              <strong><%= t(".length") %></strong> <%= video[5] %>
             </p>
           </li>
         <% end %>
