--- a/app/views/downloads/download_linux.html.erb
+++ b/app/views/downloads/download_linux.html.erb
@@ -2,8 +2,8 @@
 <%- @subsection = "" %>
 
 <div id="main">
-  <h1>Download for Linux and Unix</h1>
-  <p>It is easiest to install Git on Linux using the preferred package manager of your Linux distribution.</p>
+  <h1><%= t(".main_h1") %></h1>
+  <p><%= t(".main_p1") %></p>
 
   <h3>Debian/Ubuntu</h3>
   <code>$ apt-get install git</code>
