--- a/app/views/downloads/guis/index.html.haml
+++ b/app/views/downloads/guis/index.html.haml
@@ -1,90 +1,89 @@
 - @section = "downloads"
 - @subsection = "guis"
-- @page_title = "Git - GUI Clients"
+- @page_title = t(".page_title")
 
 - content_for :sidebar do
   = render 'shared/book'
 
 %div#main
-  %h1 GUI Clients
+  %h1 #{t(".main_h1")}
 
   %p
-    Git comes with built-in GUI tools for committing (<a href="/docs/git-gui">git-gui</a>) and browsing (<a href="/docs/gitk">gitk</a>), but there are several third-party tools for users looking for platform-specific experience.
+    #{t(".main_p1_html")}
 
   %p
-    =link_to "Only show GUIs for my OS (Linux)", "#", {:class => "subtle-button", :id => "gui-os-filter", 'data-os' => 'linux'}
+    =link_to t(".main_p2_link"), "#", {:class => "subtle-button", :id => "gui-os-filter", 'data-os' => 'linux'}
     %span#os-filter-count
       %strong 0
       %span.os Linux
-      GUIs are highlighted below ↓
+      #{t(".main_p2_highlighted")}
 
   %div.two-column
     %div.column-left
       %ul.gui-thumbnails
         %li.mac
           =link_to(image_tag('guis/github-for-mac@2x.png', {:width => '294', :height => '166'}), "http://mac.github.com/")
-          %h4= link_to "GitHub for Mac", "http://mac.github.com/"
+          %h4= link_to t(".clients_github_for_mac"), "http://mac.github.com/"
           %p.description
-            <strong>Platforms:</strong> Mac</br>
-            <strong>Price:</strong> Free
+            <strong>#{t(".clients_platforms")}</strong> Mac</br>
+            <strong>#{t(".clients_price")}</strong> #{t(".clients_price_free")}
         %li.windows
           =link_to(image_tag('guis/github-for-windows@2x.png', {:width => '294', :height => '166'}), "http://windows.github.com/")
-          %h4= link_to "GitHub for Windows", "http://windows.github.com/"
+          %h4= link_to t(".clients_github_for_windows"), "http://windows.github.com/"
           %p.description
-            <strong>Platforms:</strong> Windows</br>
-            <strong>Price:</strong> Free
+            <strong>#{t(".clients_platforms")}</strong> Windows</br>
+            <strong>#{t(".clients_price")}</strong> #{t(".clients_price_free")}
         %li.mac
           =link_to(image_tag('guis/gitx@2x.png', {:width => '294', :height => '166'}), "http://rowanj.github.io/gitx/")
           %h4= link_to "GitX-dev ", "http://rowanj.github.io/gitx/"
           %p.description
-            <strong>Platforms:</strong> Mac</br>
-            <strong>Price:</strong> Free
+            <strong>#{t(".clients_platforms")}</strong> Mac</br>
+            <strong>#{t(".clients_price")}</strong> #{t(".clients_price_free")}
         %li.mac.windows
           =link_to(image_tag('guis/sourcetree@2x.png', {:width => '294', :height => '166'}), "http://www.sourcetreeapp.com/")
           %h4= link_to "SourceTree", "http://www.sourcetreeapp.com/"
           %p.description
-            <strong>Platforms:</strong> Mac, Windows</br>
-            <strong>Price:</strong> Free
+            <strong>#{t(".clients_platforms")}</strong> Mac, Windows</br>
+            <strong>#{t(".clients_price")}</strong> #{t(".clients_price_free")}
         %li.mac.windows.linux
           =link_to(image_tag('guis/smartgit@2x.png', {:width => '294', :height => '166'}), "http://www.syntevo.com/smartgit/index.html")
           %h4= link_to "SmartGit", "http://www.syntevo.com/smartgit/index.html"
           %p.description
-            <strong>Platforms:</strong> Windows, Mac, Linux</br>
-            <strong>Price:</strong> $79/user / Free for non-commercial use
+            <strong>#{t(".clients_platforms")}</strong> Windows, Mac, Linux</br>
+            <strong>#{t(".clients_price")}</strong> $79/user / Free for non-commercial use
     %div.column-right
       %ul.gui-thumbnails
         %li.mac
           =link_to(image_tag('guis/tower@2x.png', {:width => '294', :height => '166'}), "http://git-tower.com/")
           %h4= link_to "Tower", "http://www.git-tower.com/"
           %p.description
-            <strong>Platforms:</strong> Mac</br>
-            <strong>Price:</strong> $59/user (Free 30 day trial)
+            <strong>#{t(".clients_platforms")}</strong> Mac</br>
+            <strong>#{t(".clients_price")}</strong> $59/user (Free 30 day trial)
         %li.mac
           =link_to(image_tag('guis/gitbox@2x.png', {:width => '294', :height => '166'}), "http://gitboxapp.com/")
           %h4= link_to "Gitbox", "http://www.gitboxapp.com/"
           %p.description
-            <strong>Platforms:</strong> Mac</br>
-            <strong>Price:</strong> $14.99
+            <strong>#{t(".clients_platforms")}</strong> Mac</br>
+            <strong>#{t(".clients_price")}</strong> $14.99
         %li.windows
           =link_to(image_tag('guis/git-extensions@2x.png', {:width => '294', :height => '166'}), "http://code.google.com/p/gitextensions/")
           %h4= link_to "Git Extensions", "http://code.google.com/p/gitextensions/"
           %p.description
-            <strong>Platforms:</strong> Windows</br>
-            <strong>Price:</strong> Free
+            <strong>#{t(".clients_platforms")}</strong> Windows</br>
+            <strong>#{t(".clients_price")}</strong> #{t(".clients_price_free")}
         %li.mac.windows.linux
           =link_to(image_tag('guis/git-cola@2x.png', {:width => '294', :height => '166'}), "http://git-cola.github.com/")
           %h4= link_to "git-cola", "http://git-cola.github.com/"
           %p.description
-            <strong>Platforms:</strong> Windows, Mac, Linux</br>
-            <strong>Price:</strong> Free
+            <strong>#{t(".clients_platforms")}</strong> Windows, Mac, Linux</br>
+            <strong>#{t(".clients_price")}</strong> #{t(".clients_price_free")}
         %li.mac.windows.linux
           =link_to(image_tag('guis/giteye@2x.png', {:width => '294', :height => '166'}), "http://www.giteyeapp.com/")
           %h4= link_to "GitEye", "http://www.giteyeapp.com/"
           %p.description
-            <strong>Platforms:</strong> Windows, Mac, Linux</br>
-            <strong>Price:</strong> Free
+            <strong>#{t(".clients_platforms")}</strong> Windows, Mac, Linux</br>
+            <strong>#{t(".clients_price")}</strong> #{t(".clients_price_free")}
 
   %div.callout
     %p
-      There are other great GUI tools available as well. Have a look at the list of <a href="https://git.wiki.kernel.org/index.php/InterfacesFrontendsAndTools">interfaces, frontends and tools</a> in the Git Wiki.
-
+      #{t(".callout_p1_html")}
